// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppsListPage should match snapshot for loading state 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 1.5rem;
}

.emotion-4 {
  margin-top: 1.5rem;
}

.emotion-5 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.emotion-2 {
  font-size: 1rem;
  margin-bottom: 0.75rem;
}

.emotion-3 {
  font-size: 0.875rem;
  padding-right: 1.5rem;
}

.emotion-8 {
  background-color: #f7f9fa;
}

.emotion-7 {
  position: relative;
  margin-bottom: 1.5rem;
}

.emotion-0 {
  fill: #0eb87f;
}

.emotion-1 {
  width: 100%;
  height: 100%;
  display: block;
  width: 32px;
  height: 32px;
  max-width: 32px;
  max-height: 32px;
  min-width: 32px;
  min-height: 32px;
}

<div>
  <div
    class="Workbench__Workbench___THi9K emotion-8"
    data-test-id="cf-ui-workbench"
  >
    <div
      class="Workbench__Workbench__header___2wo2E"
      data-test-id="cf-ui-workbench-header"
    >
      <div
        class="Workbench__Workbench__header-icon___1kJlL"
      >
        <div
          class="icon-component emotion-1"
          data-icon-name="headline-apps"
          data-test-id="product-icon"
        >
          <apps.svg
            class="emotion-0"
          />
        </div>
      </div>
      <div
        class="Workbench__Workbench__header-title___3xp7b"
        data-test-id="workbench-title"
      >
        <h1
          class="Heading__Heading___83D3K"
          data-test-id="cf-ui-heading"
        >
          Apps
        </h1>
      </div>
      <div
        class="Workbench__Workbench__header-actions___mJoSR"
      >
        <button
          class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
          data-test-id="cf-ui-text-link"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            Give your feedback
          </span>
        </button>
      </div>
    </div>
    <div
      class="Workbench__Workbench__content-wrapper___3yWKi"
    >
      <div
        class="Workbench__Workbench__content___1U8bV"
        data-test-id="cf-ui-workbench-content"
      >
        <div
          class="Workbench__Workbench__content-inner___36_Hx Workbench__Workbench__content-inner--text___7nfTX"
        >
          <div
            class="Card__Card___1_26G emotion-6 Card__Card--padding-large___2KzUK"
            data-test-id="cf-ui-card"
          >
            <div>
              <h1
                class="Heading__Heading___83D3K emotion-2"
                data-test-id="cf-ui-heading"
              >
                Introducing Contentful apps
              </h1>
              <p
                class="Paragraph__Paragraph___2aO-9 emotion-3"
                data-test-id="cf-ui-paragraph"
              >
                Contentful apps extend the capabilities of the Contentful web app and the editors who use it. Apps empower you to integrate third-party services, build efficient workflows and customize the functionality of the Contentful web app.
              </p>
              <a
                class="Button__Button___1ZfFj a11y__focus-border--default___60AXp emotion-4 Button__Button--primary___JImeO"
                data-test-id="cf-ui-button"
                href="https://www.contentful.com/app-framework/?utm_source=webapp&utm_medium=apps-cta-button&utm_campaign=in-app-help"
                rel="noopener noreferrer"
                target="_blank"
                type="button"
              >
                <span
                  class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
                  tabindex="-1"
                >
                  <span
                    class="Button__Button__label___3tcOj"
                  >
                    Learn more about Contentful apps
                  </span>
                </span>
              </a>
            </div>
            <div
              class="emotion-5"
            >
              <connected-shapes.svg
                classname="css-1z01nmi-svgContainerExtension"
              />
            </div>
          </div>
          <div
            class="Card__Card___1_26G emotion-7 Card__Card--padding-large___2KzUK"
            data-test-id="cf-ui-card"
          >
            <div>
              <svg
                aria-label="Loading apps list..."
                class="SkeletonContainer__SkeletonContainer___23jiu"
                data-test-id="cf-ui-skeleton-form"
                height="200"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                width="600"
              >
                <title>
                  Loading apps list...
                </title>
                <rect
                  clip-path="url(#cf-ui-skeleton-clip-0)"
                  height="100%"
                  style="fill: url(#cf-ui-skeleton-clip-gradient-1);"
                  width="100%"
                  x="0"
                  y="0"
                />
                <defs>
                  <clippath
                    id="cf-ui-skeleton-clip-0"
                  >
                    <rect
                      height="21"
                      rx="0"
                      ry="0"
                      width="100"
                      x="0"
                      y="0"
                    />
                    <rect
                      height="36"
                      rx="36"
                      ry="36"
                      width="36"
                      y="60"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="240"
                      x="50"
                      y="75"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="90"
                      x="510"
                      y="75"
                    />
                    <rect
                      height="36"
                      rx="36"
                      ry="36"
                      width="36"
                      y="110"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="240"
                      x="50"
                      y="125"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="90"
                      x="510"
                      y="125"
                    />
                    <rect
                      height="36"
                      rx="36"
                      ry="36"
                      width="36"
                      y="160"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="240"
                      x="50"
                      y="175"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="90"
                      x="510"
                      y="175"
                    />
                  </clippath>
                  <lineargradient
                    id="cf-ui-skeleton-clip-gradient-1"
                  >
                    <stop
                      offset="0%"
                      stop-color="#e5ebed"
                      stop-opacity="1"
                    >
                      <animate
                        attributeName="stop-color"
                        dur="2s"
                        id="animation-2"
                        repeatCount="indefinite"
                        values="#e5ebed; #f7f9fa; #e5ebed"
                      />
                    </stop>
                    <stop
                      offset="50%"
                      stop-color="#f7f9fa"
                      stop-opacity="1"
                    >
                      <animate
                        attributeName="stop-color"
                        begin="animation-2.begin+0.25s"
                        dur="2s"
                        repeatCount="indefinite"
                        values="#e5ebed; #f7f9fa; #e5ebed"
                      />
                    </stop>
                    <stop
                      offset="100%"
                      stop-color="#e5ebed"
                      stop-opacity="1"
                    >
                      <animate
                        attributeName="stop-color"
                        begin="animation-2.begin+0.5s"
                        dur="2s"
                        repeatCount="indefinite"
                        values="#e5ebed; #f7f9fa; #e5ebed"
                      />
                    </stop>
                  </lineargradient>
                </defs>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppsListPage should match snapshot of apps loaded state 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 1.5rem;
}

.emotion-4 {
  margin-top: 1.5rem;
}

.emotion-5 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.emotion-2 {
  font-size: 1rem;
  margin-bottom: 0.75rem;
}

.emotion-3 {
  font-size: 0.875rem;
  padding-right: 1.5rem;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1rem 0;
  border-bottom: 1px solid #e5ebed;
}

.emotion-13:last-child {
  border-bottom: none;
  padding-bottom: 0;
}

.emotion-11 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: block;
}

.emotion-8 {
  font-size: 0.75rem;
  color: #b4c3ca;
}

.emotion-10 {
  font-size: 1rem;
  font-weight: 500;
}

.emotion-12 {
  display: block;
}

.emotion-12 button {
  margin-left: 1rem;
}

.emotion-7 {
  border-radius: 5px;
  margin-right: 0.75rem;
  background-color: #fff;
  box-shadow: 0 1px 3px rgba(0,0,0,0.08);
  padding: 2px;
  width: 35px;
  height: 35px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.emotion-50 {
  background-color: #f7f9fa;
}

.emotion-49 {
  position: relative;
  margin-bottom: 1.5rem;
}

.emotion-0 {
  fill: #0eb87f;
}

.emotion-1 {
  width: 100%;
  height: 100%;
  display: block;
  width: 32px;
  height: 32px;
  max-width: 32px;
  max-height: 32px;
  min-width: 32px;
  min-height: 32px;
}

<div>
  <div
    class="Workbench__Workbench___THi9K emotion-50"
    data-test-id="cf-ui-workbench"
  >
    <div
      class="Workbench__Workbench__header___2wo2E"
      data-test-id="cf-ui-workbench-header"
    >
      <div
        class="Workbench__Workbench__header-icon___1kJlL"
      >
        <div
          class="icon-component emotion-1"
          data-icon-name="headline-apps"
          data-test-id="product-icon"
        >
          <apps.svg
            class="emotion-0"
          />
        </div>
      </div>
      <div
        class="Workbench__Workbench__header-title___3xp7b"
        data-test-id="workbench-title"
      >
        <h1
          class="Heading__Heading___83D3K"
          data-test-id="cf-ui-heading"
        >
          Apps
        </h1>
      </div>
      <div
        class="Workbench__Workbench__header-actions___mJoSR"
      >
        <button
          class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
          data-test-id="cf-ui-text-link"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            Give your feedback
          </span>
        </button>
      </div>
    </div>
    <div
      class="Workbench__Workbench__content-wrapper___3yWKi"
    >
      <div
        class="Workbench__Workbench__content___1U8bV"
        data-test-id="cf-ui-workbench-content"
      >
        <div
          class="Workbench__Workbench__content-inner___36_Hx Workbench__Workbench__content-inner--text___7nfTX"
        >
          <div
            class="Card__Card___1_26G emotion-6 Card__Card--padding-large___2KzUK"
            data-test-id="cf-ui-card"
          >
            <div>
              <h1
                class="Heading__Heading___83D3K emotion-2"
                data-test-id="cf-ui-heading"
              >
                Introducing Contentful apps
              </h1>
              <p
                class="Paragraph__Paragraph___2aO-9 emotion-3"
                data-test-id="cf-ui-paragraph"
              >
                Contentful apps extend the capabilities of the Contentful web app and the editors who use it. Apps empower you to integrate third-party services, build efficient workflows and customize the functionality of the Contentful web app.
              </p>
              <a
                class="Button__Button___1ZfFj a11y__focus-border--default___60AXp emotion-4 Button__Button--primary___JImeO"
                data-test-id="cf-ui-button"
                href="https://www.contentful.com/developers/docs/extensibility/app-framework/?utm_source=webapp&utm_medium=apps-cta-button&utm_campaign=in-app-help"
                rel="noopener noreferrer"
                target="_blank"
                type="button"
              >
                <span
                  class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
                  tabindex="-1"
                >
                  <span
                    class="Button__Button__label___3tcOj"
                  >
                    Learn more about Contentful apps
                  </span>
                </span>
              </a>
            </div>
            <div
              class="emotion-5"
            >
              <connected-shapes.svg
                classname="css-1z01nmi-svgContainerExtension"
              />
            </div>
          </div>
          <div
            class="Card__Card___1_26G emotion-49 Card__Card--padding-large___2KzUK"
            data-test-id="cf-ui-card"
          >
            <div>
              <h2
                class="Heading__Heading___83D3K"
                data-test-id="cf-ui-heading"
              >
                Available
              </h2>
              <div>
                <div
                  class="emotion-13"
                >
                  <div
                    class="emotion-11"
                    data-test-id="app-title"
                  >
                    <h3
                      class="Heading__Heading___83D3K emotion-10"
                      data-test-id="cf-ui-heading"
                    >
                      <div
                        class="emotion-9"
                        data-test-id="app-details"
                      >
                        <img
                          class="emotion-7"
                          src="//images.ctfassets.net/lpjm8d10rkpy/2dYQ3x6VMNZJgDXYmMzLBx/b338ad4b50cd0ff31e7157671b801b4d/logomark.svg"
                        />
                        <div>
                          Netlify
                          <div
                            class="emotion-8"
                          >
                            Easily build and preview sites with the Netlify app 
                          </div>
                        </div>
                      </div>
                    </h3>
                  </div>
                  <div
                    class="emotion-12"
                  >
                    <button
                      class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                      data-test-id="cf-ui-text-link"
                      type="button"
                    >
                      <span
                        class="TabFocusTrap__TabFocusTrap___39Vty"
                        tabindex="-1"
                      >
                        About
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="emotion-13"
                >
                  <div
                    class="emotion-11"
                    data-test-id="app-title"
                  >
                    <h3
                      class="Heading__Heading___83D3K emotion-10"
                      data-test-id="cf-ui-heading"
                    >
                      <div
                        class="emotion-9"
                        data-test-id="app-details"
                      >
                        <img
                          class="emotion-7"
                          src="//images.ctfassets.net/lpjm8d10rkpy/4X7O4Q0pIgQZNcONoQrQlp/9262ad9a935fa92e9cacd9207ae0a401/optimizely-logo.svg"
                        />
                        <div>
                          Optimizely
                          <div
                            class="emotion-8"
                          >
                            Enable experimentation at scale with the Optimizely app
                          </div>
                        </div>
                      </div>
                    </h3>
                  </div>
                  <div
                    class="emotion-12"
                  >
                    <button
                      class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                      data-test-id="cf-ui-text-link"
                      type="button"
                    >
                      <span
                        class="TabFocusTrap__TabFocusTrap___39Vty"
                        tabindex="-1"
                      >
                        About
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="emotion-13"
                >
                  <div
                    class="emotion-11"
                    data-test-id="app-title"
                  >
                    <h3
                      class="Heading__Heading___83D3K emotion-10"
                      data-test-id="cf-ui-heading"
                    >
                      <div
                        class="emotion-9"
                        data-test-id="app-details"
                      >
                        <img
                          class="emotion-7"
                          src="//images.ctfassets.net/lpjm8d10rkpy/1o6HKvOxxumeW64hv6ANMw/b1c5308bcd4e48cfaafc185c0b12aa36/Gatsby_Monogram.svg"
                        />
                        <div>
                          Gatsby Cloud
                          <div
                            class="emotion-8"
                          >
                            Instantly see content changes on your website with the Gatsby app
                          </div>
                        </div>
                      </div>
                    </h3>
                  </div>
                  <div
                    class="emotion-12"
                  >
                    <button
                      class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                      data-test-id="cf-ui-text-link"
                      type="button"
                    >
                      <span
                        class="TabFocusTrap__TabFocusTrap___39Vty"
                        tabindex="-1"
                      >
                        About
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="emotion-13"
                >
                  <div
                    class="emotion-11"
                    data-test-id="app-title"
                  >
                    <h3
                      class="Heading__Heading___83D3K emotion-10"
                      data-test-id="cf-ui-heading"
                    >
                      <div
                        class="emotion-9"
                        data-test-id="app-details"
                      >
                        <img
                          class="emotion-7"
                          src="//images.ctfassets.net/lpjm8d10rkpy/3ZH89y9VHHd53v4OQ3BG0V/cc62043a88cd5fb80719687f299e7351/cloudinary_icon_for_white_bg.svg"
                        />
                        <div>
                          Cloudinary
                          <div
                            class="emotion-8"
                          >
                            Seamlessly deliver images and videos with the Cloudinary app
                          </div>
                        </div>
                      </div>
                    </h3>
                  </div>
                  <div
                    class="emotion-12"
                  >
                    <button
                      class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                      data-test-id="cf-ui-text-link"
                      type="button"
                    >
                      <span
                        class="TabFocusTrap__TabFocusTrap___39Vty"
                        tabindex="-1"
                      >
                        About
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="emotion-13"
                >
                  <div
                    class="emotion-11"
                    data-test-id="app-title"
                  >
                    <h3
                      class="Heading__Heading___83D3K emotion-10"
                      data-test-id="cf-ui-heading"
                    >
                      <div
                        class="emotion-9"
                        data-test-id="app-details"
                      >
                        <img
                          class="emotion-7"
                          src="//images.ctfassets.net/lpjm8d10rkpy/3vNJZRjthatucy2mBJMy1u/0e5d501207427780021e7580cc384761/bynder.5e9e457b9d.svg"
                        />
                        <div>
                          Bynder
                          <div
                            class="emotion-8"
                          >
                            Find and use brand, marketing and product assets from your Bynder library 
                          </div>
                        </div>
                      </div>
                    </h3>
                  </div>
                  <div
                    class="emotion-12"
                  >
                    <button
                      class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                      data-test-id="cf-ui-text-link"
                      type="button"
                    >
                      <span
                        class="TabFocusTrap__TabFocusTrap___39Vty"
                        tabindex="-1"
                      >
                        About
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="emotion-13"
                >
                  <div
                    class="emotion-11"
                    data-test-id="app-title"
                  >
                    <h3
                      class="Heading__Heading___83D3K emotion-10"
                      data-test-id="cf-ui-heading"
                    >
                      <div
                        class="emotion-9"
                        data-test-id="app-details"
                      >
                        <img
                          class="emotion-7"
                          src="//images.ctfassets.net/lpjm8d10rkpy/7KdyOX9FlBz0SX5QyaLFaF/6ee4f786204d6f80b096fb73584dbcf7/logo.svg"
                        />
                        <div>
                          Dropbox
                          <div
                            class="emotion-8"
                          >
                            Connect Contentful and Dropbox to easily share content 
                          </div>
                        </div>
                      </div>
                    </h3>
                  </div>
                  <div
                    class="emotion-12"
                  >
                    <button
                      class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                      data-test-id="cf-ui-text-link"
                      type="button"
                    >
                      <span
                        class="TabFocusTrap__TabFocusTrap___39Vty"
                        tabindex="-1"
                      >
                        About
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppsListPage should match snapshot of apps loaded with limited access 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 1.5rem;
}

.emotion-4 {
  margin-top: 1.5rem;
}

.emotion-5 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.emotion-2 {
  font-size: 1rem;
  margin-bottom: 0.75rem;
}

.emotion-3 {
  font-size: 0.875rem;
  padding-right: 1.5rem;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1rem 0;
  border-bottom: 1px solid #e5ebed;
}

.emotion-13:last-child {
  border-bottom: none;
  padding-bottom: 0;
}

.emotion-11 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: block;
}

.emotion-8 {
  font-size: 0.75rem;
  color: #b4c3ca;
}

.emotion-10 {
  font-size: 1rem;
  font-weight: 500;
}

.emotion-12 {
  display: block;
}

.emotion-12 button {
  margin-left: 1rem;
}

.emotion-7 {
  border-radius: 5px;
  margin-right: 0.75rem;
  background-color: #fff;
  box-shadow: 0 1px 3px rgba(0,0,0,0.08);
  padding: 2px;
  width: 35px;
  height: 35px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.emotion-50 {
  background-color: #f7f9fa;
}

.emotion-49 {
  position: relative;
  margin-bottom: 1.5rem;
}

.emotion-0 {
  fill: #0eb87f;
}

.emotion-1 {
  width: 100%;
  height: 100%;
  display: block;
  width: 32px;
  height: 32px;
  max-width: 32px;
  max-height: 32px;
  min-width: 32px;
  min-height: 32px;
}

<div>
  <div
    class="Workbench__Workbench___THi9K emotion-50"
    data-test-id="cf-ui-workbench"
  >
    <div
      class="Workbench__Workbench__header___2wo2E"
      data-test-id="cf-ui-workbench-header"
    >
      <div
        class="Workbench__Workbench__header-icon___1kJlL"
      >
        <div
          class="icon-component emotion-1"
          data-icon-name="headline-apps"
          data-test-id="product-icon"
        >
          <apps.svg
            class="emotion-0"
          />
        </div>
      </div>
      <div
        class="Workbench__Workbench__header-title___3xp7b"
        data-test-id="workbench-title"
      >
        <h1
          class="Heading__Heading___83D3K"
          data-test-id="cf-ui-heading"
        >
          Apps
        </h1>
      </div>
      <div
        class="Workbench__Workbench__header-actions___mJoSR"
      >
        <button
          class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
          data-test-id="cf-ui-text-link"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            Give your feedback
          </span>
        </button>
      </div>
    </div>
    <div
      class="Workbench__Workbench__content-wrapper___3yWKi"
    >
      <div
        class="Workbench__Workbench__content___1U8bV"
        data-test-id="cf-ui-workbench-content"
      >
        <div
          class="Workbench__Workbench__content-inner___36_Hx Workbench__Workbench__content-inner--text___7nfTX"
        >
          <div
            class="Card__Card___1_26G emotion-6 Card__Card--padding-large___2KzUK"
            data-test-id="cf-ui-card"
          >
            <div>
              <h1
                class="Heading__Heading___83D3K emotion-2"
                data-test-id="cf-ui-heading"
              >
                Introducing Contentful apps
              </h1>
              <p
                class="Paragraph__Paragraph___2aO-9 emotion-3"
                data-test-id="cf-ui-paragraph"
              >
                Contentful apps extend the capabilities of the Contentful web app and the editors who use it. Apps empower you to integrate third-party services, build efficient workflows and customize the functionality of the Contentful web app.
              </p>
              <a
                class="Button__Button___1ZfFj a11y__focus-border--default___60AXp emotion-4 Button__Button--primary___JImeO"
                data-test-id="cf-ui-button"
                href="https://www.contentful.com/app-framework/?utm_source=webapp&utm_medium=apps-cta-button&utm_campaign=in-app-help"
                rel="noopener noreferrer"
                target="_blank"
                type="button"
              >
                <span
                  class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
                  tabindex="-1"
                >
                  <span
                    class="Button__Button__label___3tcOj"
                  >
                    Learn more about Contentful apps
                  </span>
                </span>
              </a>
            </div>
            <div
              class="emotion-5"
            >
              <connected-shapes.svg
                classname="css-1z01nmi-svgContainerExtension"
              />
            </div>
          </div>
          <div
            class="Card__Card___1_26G emotion-49 Card__Card--padding-large___2KzUK"
            data-test-id="cf-ui-card"
          >
            <div>
              <h2
                class="Heading__Heading___83D3K"
                data-test-id="cf-ui-heading"
              >
                Available
              </h2>
              <div>
                <div
                  class="emotion-13"
                >
                  <div
                    class="emotion-11"
                    data-test-id="app-title"
                  >
                    <h3
                      class="Heading__Heading___83D3K emotion-10"
                      data-test-id="cf-ui-heading"
                    >
                      <div
                        class="emotion-9"
                        data-test-id="app-details"
                      >
                        <img
                          class="emotion-7"
                          src="//images.ctfassets.net/lpjm8d10rkpy/2dYQ3x6VMNZJgDXYmMzLBx/b338ad4b50cd0ff31e7157671b801b4d/logomark.svg"
                        />
                        <div>
                          Netlify
                          <div
                            class="emotion-8"
                          >
                            Easily build and preview sites with the Netlify app 
                          </div>
                        </div>
                      </div>
                    </h3>
                  </div>
                  <div
                    class="emotion-12"
                  >
                    <button
                      class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                      data-test-id="cf-ui-text-link"
                      type="button"
                    >
                      <span
                        class="TabFocusTrap__TabFocusTrap___39Vty"
                        tabindex="-1"
                      >
                        About
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="emotion-13"
                >
                  <div
                    class="emotion-11"
                    data-test-id="app-title"
                  >
                    <h3
                      class="Heading__Heading___83D3K emotion-10"
                      data-test-id="cf-ui-heading"
                    >
                      <div
                        class="emotion-9"
                        data-test-id="app-details"
                      >
                        <img
                          class="emotion-7"
                          src="//images.ctfassets.net/lpjm8d10rkpy/4X7O4Q0pIgQZNcONoQrQlp/9262ad9a935fa92e9cacd9207ae0a401/optimizely-logo.svg"
                        />
                        <div>
                          Optimizely
                          <div
                            class="emotion-8"
                          >
                            Enable experimentation at scale with the Optimizely app
                          </div>
                        </div>
                      </div>
                    </h3>
                  </div>
                  <div
                    class="emotion-12"
                  >
                    <button
                      class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                      data-test-id="cf-ui-text-link"
                      type="button"
                    >
                      <span
                        class="TabFocusTrap__TabFocusTrap___39Vty"
                        tabindex="-1"
                      >
                        About
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="emotion-13"
                >
                  <div
                    class="emotion-11"
                    data-test-id="app-title"
                  >
                    <h3
                      class="Heading__Heading___83D3K emotion-10"
                      data-test-id="cf-ui-heading"
                    >
                      <div
                        class="emotion-9"
                        data-test-id="app-details"
                      >
                        <img
                          class="emotion-7"
                          src="//images.ctfassets.net/lpjm8d10rkpy/1o6HKvOxxumeW64hv6ANMw/b1c5308bcd4e48cfaafc185c0b12aa36/Gatsby_Monogram.svg"
                        />
                        <div>
                          Gatsby Cloud
                          <div
                            class="emotion-8"
                          >
                            Instantly see content changes on your website with the Gatsby app
                          </div>
                        </div>
                      </div>
                    </h3>
                  </div>
                  <div
                    class="emotion-12"
                  >
                    <button
                      class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                      data-test-id="cf-ui-text-link"
                      type="button"
                    >
                      <span
                        class="TabFocusTrap__TabFocusTrap___39Vty"
                        tabindex="-1"
                      >
                        About
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="emotion-13"
                >
                  <div
                    class="emotion-11"
                    data-test-id="app-title"
                  >
                    <h3
                      class="Heading__Heading___83D3K emotion-10"
                      data-test-id="cf-ui-heading"
                    >
                      <div
                        class="emotion-9"
                        data-test-id="app-details"
                      >
                        <img
                          class="emotion-7"
                          src="//images.ctfassets.net/lpjm8d10rkpy/3ZH89y9VHHd53v4OQ3BG0V/cc62043a88cd5fb80719687f299e7351/cloudinary_icon_for_white_bg.svg"
                        />
                        <div>
                          Cloudinary
                          <div
                            class="emotion-8"
                          >
                            Seamlessly deliver images and videos with the Cloudinary app
                          </div>
                        </div>
                      </div>
                    </h3>
                  </div>
                  <div
                    class="emotion-12"
                  >
                    <button
                      class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                      data-test-id="cf-ui-text-link"
                      type="button"
                    >
                      <span
                        class="TabFocusTrap__TabFocusTrap___39Vty"
                        tabindex="-1"
                      >
                        About
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="emotion-13"
                >
                  <div
                    class="emotion-11"
                    data-test-id="app-title"
                  >
                    <h3
                      class="Heading__Heading___83D3K emotion-10"
                      data-test-id="cf-ui-heading"
                    >
                      <div
                        class="emotion-9"
                        data-test-id="app-details"
                      >
                        <img
                          class="emotion-7"
                          src="//images.ctfassets.net/lpjm8d10rkpy/3vNJZRjthatucy2mBJMy1u/0e5d501207427780021e7580cc384761/bynder.5e9e457b9d.svg"
                        />
                        <div>
                          Bynder
                          <div
                            class="emotion-8"
                          >
                            Find and use brand, marketing and product assets from your Bynder library 
                          </div>
                        </div>
                      </div>
                    </h3>
                  </div>
                  <div
                    class="emotion-12"
                  >
                    <button
                      class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                      data-test-id="cf-ui-text-link"
                      type="button"
                    >
                      <span
                        class="TabFocusTrap__TabFocusTrap___39Vty"
                        tabindex="-1"
                      >
                        About
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="emotion-13"
                >
                  <div
                    class="emotion-11"
                    data-test-id="app-title"
                  >
                    <h3
                      class="Heading__Heading___83D3K emotion-10"
                      data-test-id="cf-ui-heading"
                    >
                      <div
                        class="emotion-9"
                        data-test-id="app-details"
                      >
                        <img
                          class="emotion-7"
                          src="//images.ctfassets.net/lpjm8d10rkpy/7KdyOX9FlBz0SX5QyaLFaF/6ee4f786204d6f80b096fb73584dbcf7/logo.svg"
                        />
                        <div>
                          Dropbox
                          <div
                            class="emotion-8"
                          >
                            Connect Contentful and Dropbox to easily share content 
                          </div>
                        </div>
                      </div>
                    </h3>
                  </div>
                  <div
                    class="emotion-12"
                  >
                    <button
                      class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
                      data-test-id="cf-ui-text-link"
                      type="button"
                    >
                      <span
                        class="TabFocusTrap__TabFocusTrap___39Vty"
                        tabindex="-1"
                      >
                        About
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
